# mc_ur5e_description

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
cmake/: Config.cmake.in  ConfigVersion.cmake.in  robot_INSTALL_PREFIX.cmake.in
launch/: display_ur5e.launch  display_ur5e.launch.py
rsdf/ur5e/: base_link.rsdf  tool0.rsdf  wrist_3_link.rsdf
rviz/: view_robot2.rviz
scripts/: generate_convex.sh
